...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <Button
            android:id="@+id/submitPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>
...
